# llm-maintained-wiki

./: CLAUDE.md  README.md  llm-wiki.sh  pyproject.toml
.agents/skills/: skills
.agents/skills/wiki-ask/: SKILL.md
.agents/skills/wiki-compare/: SKILL.md
.agents/skills/wiki-compare/references/: report-format.md
.agents/skills/wiki-context/: SKILL.md
.agents/skills/wiki-context/scripts/: wiki
.agents/skills/wiki-log/: SKILL.md
.agents/skills/wiki-resolve/: SKILL.md
.claude/commands/: wiki-ask.md  wiki-compare.md  wiki-log.md  wiki-resolve.md
docs/: implementation-plan.md  wiki-system-design.md
tests/: test_compile.py  test_lint_enhance_ask.py  test_structural.py
tests/fixtures/: config.toml  mock_claude.py
tests/fixtures/responses/: ask.txt  compile.txt  enhance.txt  lint.txt
wiki/: __main__.py  ask.py  cli.py  compile.py  config.py  enhance.py  frontmatter.py  ingest.py  lint.py  llm.py  manifest.py  vault.py
wiki/prompts/: ask.md  compile.md  enhance.md  lint.md
wiki/templates/: vault-AGENTS.md
